typefind: Post an error if we can't typefind the data until EOS

https://bugzilla.gnome.org/show_bug.cgi?id=750439